fixes #447 2px overlapping buttons with transparent borders

--- a/purple-pill/css/style.css
+++ b/purple-pill/css/style.css
@@ -158,9 +158,9 @@
 			 #view-buttons .menu-item {
 				float: left;
 				padding: 8px;
-				background: #fff;
-				margin-right: 0px;
-				border: 2px solid #eee;
+				background: transparent;
+				margin-right: -2px;
+				border: 2px solid rgba(0,0,0,0.06);
 				cursor: default;
 				width: 136px;
 				height: 32px;
@@ -172,7 +172,7 @@
     			 }
 			
 			#view-buttons .menu-item:hover, #view-buttons .menu-item-current {
-				border: 2px solid #515151;
+				border: 2px solid rgba(0,0,0,0.5);;
 			}
 			
         #help {
